--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ django-cors-headers==4.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 exceptiongroup==1.1.3
-fastapi==0.99.1
 filelock==3.12.3
 flatbuffers==23.5.26
 frozenlist==1.4.0
@@ -32,8 +31,10 @@ huggingface-hub==0.16.4
 humanfriendly==10.0
 idna==3.4
 importlib-resources==6.0.1
-langchain==0.0.286
-langsmith==0.0.35
+langchain==0.0.343
+langchain-core==0.0.7
+langdetect==1.0.9
+langsmith==0.0.67
 marshmallow==3.20.1
 monotonic==1.6
 mpmath==1.3.0
@@ -42,7 +43,7 @@ mypy-extensions==1.0.0
 numexpr==2.8.5
 numpy==1.25.2
 onnxruntime==1.15.1
-openai==0.28.0
+openai==1.3.6
 overrides==7.4.0
 packaging==23.1
 posthog==3.0.2
@@ -73,6 +74,9 @@ tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
+unstructured==0.11.0
+unstructured-inference==0.7.15
+unstructured.pytesseract==0.3.12
 urllib3==2.0.4
 uvicorn==0.23.2
 watchfiles==0.20.0
