--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+adrf==0.1.2
 aiohttp==3.8.5
 aiosignal==1.3.1
 alembic==1.13.1
@@ -8,6 +9,7 @@ anyio==3.7.1
 asgiref==3.7.2
 asteroid-filterbanks==0.4.0
 asttokens==2.4.1
+async-property==0.2.2
 async-timeout==4.0.3
 attrs==23.1.0
 audioread==3.0.1
