--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,29 @@
-﻿aiohttp==3.8.5
+adrf==0.1.2
+aiohttp==3.8.5
 aiosignal==1.3.1
+alembic==1.13.1
+altair==5.0.1
 annotated-types==0.5.0
+antlr4-python3-runtime==4.9.3
+anyio==3.7.1
 asgiref==3.7.2
+asteroid-filterbanks==0.4.0
+asttokens==2.4.1
+async-property==0.2.2
 async-timeout==4.0.3
 attrs==23.1.0
+audioread==3.0.1
+av==10.0.0
+awscli==1.31.4
 backoff==2.2.1
 bcrypt==4.0.1
 beautifulsoup4==4.12.2
+blinker==1.6.2
 boto3==1.33.4
 botocore==1.33.4
+cachetools==5.3.1
 certifi==2023.7.22
+cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.2.0
 chroma-hnswlib==0.7.3
@@ -17,79 +31,221 @@ chromadb==0.4.10
 click==8.1.7
 colorama==0.4.4
 coloredlogs==15.0.1
+colorlog==6.8.0
+comtypes==1.2.0
+contourpy==1.1.1
+cryptography==41.0.5
+ctranslate2==3.23.0
+cycler==0.12.1
 dataclasses-json==0.5.14
+decorator==5.1.1
+distlib==0.3.7
+distro==1.8.0
 Django==4.2.5
 django-cors-headers==4.2.0
+django-storages==1.14.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+docopt==0.6.2
+docutils==0.16
+effdet==0.4.1
+einops==0.7.0
 emoji==2.8.0
 exceptiongroup==1.1.3
+executing==2.0.1
+faiss-cpu==1.7.4
+Faker==19.3.0
+fastapi==0.99.1
+favicon==0.7.0
 filelock==3.12.3
 filetype==1.2.0
 flatbuffers==23.5.26
+fonttools==4.43.1
 frozenlist==1.4.0
 fsspec==2023.9.0
+gitdb==4.0.10
+GitPython==3.1.32
 greenlet==2.0.2
 h11==0.14.0
+htbuilder==0.6.1
+httpcore==1.0.2
 httptools==0.6.0
+httpx==0.25.2
 huggingface-hub==0.16.4
 humanfriendly==10.0
+HyperPyYAML==1.2.2
 idna==3.4
+importlib-metadata==6.8.0
 importlib-resources==6.0.1
+iopath==0.1.10
+ipython==8.18.1
+jedi==0.19.1
+Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+julius==0.2.7
+kiwisolver==1.4.5
 langchain==0.0.343
 langchain-core==0.0.7
+langdetect==1.0.9
 langsmith==0.0.67
+layoutparser==0.3.4
+lazy_loader==0.3
+librosa==0.10.1
+lightning==2.1.3
+lightning-utilities==0.10.0
+llvmlite==0.41.1
 lxml==4.9.3
+Mako==1.3.0
+Markdown==3.4.4
+markdown-it-py==3.0.0
+markdownlit==0.0.7
+MarkupSafe==2.1.3
 marshmallow==3.20.1
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
 monotonic==1.6
+more-itertools==10.1.0
 mpmath==1.3.0
+msgpack==1.0.7
 multidict==6.0.4
 mypy-extensions==1.0.0
+networkx==3.2
 nltk==3.8.1
+numba==0.58.1
 numexpr==2.8.5
 numpy==1.25.2
+omegaconf==2.3.0
+onnx==1.14.1
 onnxruntime==1.15.1
 openai==1.3.6
+openai-whisper==20231117
+opencv-python==4.8.1.78
+optuna==3.5.0
 overrides==7.4.0
 packaging==23.1
+pandas==2.1.1
+parso==0.8.3
+pdf2image==1.16.3
+pdfminer.six==20221105
+pdfplumber==0.10.2
+Pillow==10.1.0
+platformdirs==4.1.0
+plotly==5.17.0
+pooch==1.8.0
+portalocker==2.8.2
 posthog==3.0.2
+primePy==1.3
+prompt-toolkit==3.0.41
 protobuf==4.24.3
 pulsar-client==3.3.0
+pure-eval==0.2.2
+pyannote.audio==3.1.0
+pyannote.core==5.0.0
+pyannote.database==5.0.1
+pyannote.metrics==3.2.1
+pyannote.pipeline==3.0.1
+pyarrow==12.0.1
+pyasn1==0.5.1
+pycocotools==2.0.7
+pycparser==2.21
 pydantic==1.10.12
 pydantic_core==2.6.3
+pydeck==0.8.0
+pygame==2.5.2
+Pygments==2.17.2
 PyJWT==2.8.0
+pymdown-extensions==10.1
+Pympler==1.0.1
+pyparsing==3.1.1
+PyPDF2==3.0.1
+pypdfium2==4.22.0
 PyPika==0.48.9
+pypiwin32==223
 pyreadline3==3.4.1
+pytesseract==0.3.10
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-iso639==2023.6.15
 python-magic==0.4.27
+python-multipart==0.0.6
+pytorch-lightning==2.1.3
+pytorch-metric-learning==2.4.1
 pyttsx3==2.90
 pytz==2023.3.post1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==306
 PyYAML==6.0.1
+rapidfuzz==3.4.0
+referencing==0.30.2
 regex==2023.8.8
 requests==2.31.0
+rich==13.7.0
+rpds-py==0.9.2
+rsa==4.7.2
+ruamel.yaml==0.18.5
+ruamel.yaml.clib==0.2.8
 s3transfer==0.8.2
+safetensors==0.4.0
+scikit-learn==1.3.2
+scipy==1.11.3
+semver==3.0.2
+sentencepiece==0.1.99
+shellingham==1.5.4
 six==1.16.0
+smmap==5.0.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
+soundfile==0.12.1
 soupsieve==2.5
+soxr==0.3.7
+speechbrain==0.5.16
 SQLAlchemy==2.0.20
 sqlparse==0.4.4
+st-annotated-text==4.0.0
+stack-data==0.6.3
 starlette==0.27.0
 sympy==1.12
 tabulate==0.9.0
 tenacity==8.2.3
+tensorboardX==2.6.2.2
+threadpoolctl==3.2.0
 tiktoken==0.4.0
+timm==0.9.8
 tokenizers==0.14.0
+toml==0.10.2
+toolz==0.12.0
+torch==2.1.2
+torch-audiomentations==0.11.0
+torch-pitch-shift==1.2.4
+torchaudio==2.1.2
+torchmetrics==1.2.1
+torchvision==0.16.2
+tornado==6.3.3
 tqdm==4.66.1
+traitlets==5.14.0
+transformers==4.34.1
+typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
-unstructured-inference==0.7.15
-unstructured==0.10.19
-urllib3==1.26.17
+tzlocal==4.3.1
+unstructured==0.10.26
+unstructured-inference==0.7.10
+unstructured.pytesseract==0.3.12
+urllib3==2.0.4
 uvicorn==0.23.2
+validators==0.21.2
+virtualenv==20.24.7
+watchdog==3.0.0
 watchfiles==0.20.0
+wcwidth==0.2.12
 websockets==11.0.3
+whisper==1.1.10
 yarl==1.9.2
+zipp==3.16.2
