--- a/requirements.txt
+++ b/requirements.txt
@@ -163,6 +163,7 @@ PyJWT==2.8.0
 pymdown-extensions==10.1
 Pympler==1.0.1
 pyparsing==3.1.1
+pypdf==4.0.1
 PyPDF2==3.0.1
 pypdfium2==4.22.0
 PyPika==0.48.9
