--- a/requirements.txt
+++ b/requirements.txt
@@ -196,6 +196,7 @@ safetensors==0.4.0
 scikit-learn==1.3.2
 scipy==1.11.3
 semver==3.0.2
+sentence-transformers==2.2.2
 sentencepiece==0.1.99
 shellingham==1.5.4
 six==1.16.0
